...
        .addCueOfType0, .addCueOfType1, .addCueOfType2, .addCueOfType3, .addCueOfType4,
        .addCueOfType5, .addCueOfType6, .addCueOfType7, .addCueOfType8, .addCueOfType9
    ]

    private static let displayNames: [Self: String] = [
        .importMedia: "Import Media…",
        .exportCues: "Export Cues…",
        .waveformZoomIn: "Zoom In",
        .waveformZoomOut: "Zoom Out",
        .waveformZoomReset: "Actual Size",
        .toggleNotesOverlay: "Show Notes Overlay",
        .toggleTimelineBreakdown: "Show Timeline Breakdown",
        .toggleTempoGrid: "Show Tempo Grid",
...
